--- a/pilot/src/components/sacred/Grid.module.scss
+++ b/pilot/src/components/sacred/Grid.module.scss
@@ -1,4 +1,14 @@
 .grid {
-  display: block;
-  padding: calc(var(--font-size) * var(--theme-line-height-base)) 2ch calc(var(--font-size) * var(--theme-line-height-base)) 2ch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  gap: 6rem;
+  padding: calc(var(--font-size) * var(--theme-line-height-base)) 0;
+
+  @media (max-width: 768px) {
+    gap: 4rem;
+    padding: calc(var(--font-size) * var(--theme-line-height-base)) 0;
+  }
 }
